[package]
name = "avr-ws2812b"
version = "0.1.0"
edition = "2021"

[dependencies]
avr-pin = { git = "https://github.com/MCATSW/avr-pin.git" }
avr-delay = { git = "https://github.com/MCATSW/avr-delay.git" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
lto = true
codegen-units = 1
panic = "abort"

